<resources>
    <string name="app_name">UniRoyal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_aboutus">About US</string>
    <string name="nav_mission_vission">Vision &amp; Mission</string>
    <string name="nav_products">Our Products</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_contactus">Contact Us</string>
    <string name="nav_enquiry">Enquiry</string>
    <string name="nav_download_catelog">Download Catalogue</string>
    <string name="nav_share">Share</string>
    <string name="download_catelog">The 2018
UniRoyal Catalog
is here!</string>
    <string name="download_catelog2">Our new catalog is full of Fresh, affordable Seafood &amp; Meat Products.</string>
    <string name="download_catelog3">Sign up to receive your digital version today.</string>
    <string name="contactus_click_email_address">Click on the email address to reach us</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
