<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_5dp"
        android:text="@string/download_catelog"
        android:textColor="@color/grey"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_5dp"
        android:text="@string/download_catelog2"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true"
        android:gravity="left"
        android:padding="@dimen/_5dp"
        android:text="@string/download_catelog3"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titlebar"
                android:padding="5dp"
                android:visibility="visible"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:padding="@dimen/_5dp"
                        android:text="UserName"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottomline"
                        android:hint="name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:padding="@dimen/_5dp"
                        android:text="Company Name"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_companyname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottomline"
                        android:hint="Company Name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:padding="@dimen/_5dp"
                        android:text="Email"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_useremail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottomline"
                        android:hint="email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:padding="@dimen/_5dp"
                        android:text="Phone"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_userbiography"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottomline"
                        android:hint="phone"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="150"
                        android:maxLines="4"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/viewline1"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/grey" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimary"
                        android:text="Download"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>